# linkrot

./: .eslintrc.*  .gitignore  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  LICENSE.txt  Makefile  README.md  RETRACTION_FEATURE.md  SECURITY.md  app.py  build-deb.sh  newrelic.ini  pyproject.toml  requirements.txt  requirements_dev.txt  setup-deb-build.py  setup.py  snapcraft.yaml  test-deb-install.sh
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  update.md
.github/workflows/: OWASP.yml  codeql-analysis.yml  codeql.yml  debain-package.yml  greetings.yml  label.yml  link-snitch.yml  lint-and-test.yml  lint.yml  main.yml  opencommit.yml  ossar-analysis.yml  ossar.yml  publish-to-pypi.yml  pytest.yml  python_dist.yml  qodana.yml  ruff.yml  safe-space.yml  snapcraft.yml  stale.yml
Writerside/: in.tree
Writerside/cfg/: buildprofiles.xml
Writerside/topics/: CONTRIBUTING.md  README.md  SECURITY.md
Writerside/topics/.github/ISSUE_TEMPLATE/: bug_report.md  update.md
debian/: README.md  changelog  control  copyright  linkrot.1  linkrot.install  linkrot.manpages  rules
examples/: retraction_demo.py
linkrot/: __init__.py  archive.py  backends.py  cli.py  colorprint.py  downloader.py  exceptions.py  extractor.py  retraction.py  threadpool.py
linkrot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
linkrot/libs/: __init__.py  xmp.py
snap/: snapcraft.yaml
static/css/: style.css
templates/: about.html  analysis.html  upload.html
tests/: conftest.py  constants.py  test_archive.py  test_backends.py  test_cli.py  test_colorprint.py  test_doi_comprehensive.py  test_downloader.py  test_exceptions.py  test_extractor.py  test_integration.py  test_linkrot.py  test_pdfx.py  test_retraction.py  test_threadpool.py
